<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/lbl_discover"
            app:titleCentered="true"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner"/>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:elevation="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1.0"
                    app:selectedDotColor="@color/colorAccent"
                    app:progressMode="false" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmAndSeriesLabel"
                android:layout_below="@id/flBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_best_popular_film_and_series"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginStart="@dimen/margin_medium_2_18"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <include
                android:layout_below="@id/tvBestPopularFilmAndSeriesLabel"
                android:id="@+id/vpBestPopularMovieList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_movie_list"/>

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTimes"
                android:layout_below="@id/vpBestPopularMovieList"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_time"
                android:background="@color/colorPrimaryLight"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tbCheckMovieAndShowTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_check_movie_showtimes"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:layout_marginTop="@dimen/text_regular_3x"
                    android:layout_marginStart="@dimen/margin_medium_3"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_see_more"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_regular_3x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:layout_alignParentBottom="true"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_white_36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"/>

            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_below="@id/rlCheckMovieShowTimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:tabIndicator="@color/colorAccent"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText"
                android:layout_marginTop="@dimen/margin_medium_3"/>
            
            <FrameLayout
                android:id="@+id/flMovieGenre"
                android:layout_below="@id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large"
                android:background="@color/colorPrimaryDark">

                <include
                    android:id="@+id/vpMovieByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_pod_movie_list"/>

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_below="@id/flMovieGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_showcases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowCases"
                android:layout_below="@id/flMovieGenre"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_more_showcases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"/>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowCases"
                android:layout_below="@id/tvMoreShowCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:layout_marginTop="@dimen/margin_medium_12"/>

            <include
                android:layout_below="@id/rvShowCases"
                android:id="@+id/vpBestActor"
                layout="@layout/view_pod_actor_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_3"/>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>